changed the whole code for 'Kreative'

--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Keven Oliveira | Designer Gráfico</title>
+    <title>Kreative | Full Service</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon" />
   </head>
   <body>
     <div id="container">
       <div id="profile">
         <img src="./assets/perfil.png" alt="Foto de perfil" />
-        <p>@keven.oliveirag</p>
+        <p>@kreativedzn</p>
       </div>
       <div id="switch" onclick="toogleMode()">
         <button></button>
@@ -33,34 +34,21 @@
           >
         </li>
         <li>
-          <a href="#">Veja meu portifólio</a>
-        </li>
-        <li>
-          <a href="#">Conheça o Explorer</a>
+          <a href="https://www.instagram.com/kreativedzn/"
+            >Veja meu portifólio</a
+          >
         </li>
       </ul>
       <div id="links">
-        <a href="https://github.com/Kvn-OG" target="_blank">
-          <ion-icon name="logo-github"></ion-icon>
-        </a>
-        <a href="https://www.instagram.com/keven.oliveirag/" target="_blank">
+        <a href="https://www.instagram.com/kreativedzn/" target="_blank">
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
-        <a
-          href="https://www.youtube.com/channel/UCKOEwX_ZMGB1Id12P5XHuLw"
-          target="_blank"
-        >
-          <ion-icon name="logo-youtube"></ion-icon>
-        </a>
-        <a
-          href="https://www.linkedin.com/in/keven-oliveira-76b21023b/"
-          target="_blank"
-        >
-          <ion-icon name="logo-linkedin"></ion-icon>
+        <a href="https://www.behance.net/kevenoliveira9" target="_blank">
+          <ion-icon name="logo-behance"></ion-icon>
         </a>
       </div>
       <footer>
-        <p>Todos os direitos reservados a Keven Oliveira.</p>
+        <p>Todos os direitos reservados a Kreative.</p>
       </footer>
     </div>
 
